# internal/handler/rest/router.go
@@ -15,7 +15,8 @@ func (s *Server) routers() http.Handler {
 	mux.HandleFunc(s.cfg.ServerPrefix+"/tokenize", s.tokenize)
 	mux.HandleFunc(s.cfg.ServerPrefix+"/untokenize", s.auth(s.tokenDelete))
 	mux.HandleFunc(s.cfg.ServerPrefix+"/faculties", s.auth(s.userFaculties))
-	mux.HandleFunc(s.cfg.ServerPrefix+"/courses", s.auth(s.groupCourses))
+	mux.HandleFunc(s.cfg.ServerPrefix+"/courses/pt", s.auth(s.groupCoursesPt))
+	mux.HandleFunc(s.cfg.ServerPrefix+"/courses/at", s.auth(s.groupCoursesAt))
 	mux.HandleFunc(s.cfg.ServerPrefix+"/academic_years", s.auth(s.academicYears))
 	mux.HandleFunc(s.cfg.ServerPrefix+"/topic/all", s.auth(s.topics))
 	mux.HandleFunc(s.cfg.ServerPrefix+"/topic/create", s.auth(s.topicCreate))
