# internal/storage/sqlserver/uchproc.go
@@ -8,34 +8,73 @@ import (
 	"time"
 )
 
-func (d *db) GetGroupCourses(ctx context.Context, groupId, userId int64) (cs []dto.Course, err error) {
+func (d *db) GetGroupCoursesAttendance(ctx context.Context, groupId, userId int64, academicYear string) (cs []dto.Course, err error) {
 	cs = []dto.Course{}
 	var (
 		assisTantId int64
 		teacherId   int64
 	)
 	queryStr := `SELECT 
-    				tblvdkr.kas,
-					tblvdkr.kst,
-					tblvdkr.kdn,
-					tblvdkr.kgr,
-					tblvdtkr.kdn,
+    				t.kas,
+					t.kst,
+					t.kdn,
+					t.kgr,
 					prk.npr, 
 					sot.nst, 
-					tblvdkr.kolkr
-				FROM tblvdkr
-				INNER JOIN prk ON tblvdkr.kpr = prk.kdn
-				INNER JOIN sot ON (tblvdkr.kst = sot.kdn OR tblvdkr.kas = sot.kdn)
-				INNER JOIN tblvdtkr ON (tblvdkr.kpr = tblvdtkr.kpr)
-				WHERE tblvdkr.kgr = $1 AND (tblvdkr.kst = $2 OR tblvdkr.kas = $2)`
-	rows, err := d.pool.QueryContext(ctx, queryStr, groupId, userId)
+					t.kolkr
+				FROM tblvdtkr t
+				INNER JOIN prk ON t.kpr = prk.kdn
+				INNER JOIN sot ON (t.kst = sot.kdn OR t.kas = sot.kdn)
+				WHERE t.kgr = $1 AND (t.kst = $2 OR t.kas = $2) AND chruchgod = $3`
+	rows, err := d.pool.QueryContext(ctx, queryStr, groupId, userId, academicYear)
 	if err != nil {
 		return
 	}
 
 	for rows.Next() {
 		c := dto.Course{}
-		err = rows.Scan(&assisTantId, &teacherId, &c.AttendanceId, &c.GroupId, &c.PointId, &c.CourseName, &c.TeacherName, &c.CreditsCount)
+		err = rows.Scan(&assisTantId, &teacherId, &c.AttendanceId, &c.GroupId, &c.CourseName, &c.TeacherName, &c.CreditsCount)
+		if err != nil {
+			return
+		}
+		if assisTantId != 0 {
+			c.IsAssistant = true
+		}
+		c.CourseName = strings.TrimSpace(c.CourseName)
+		c.CreditsCount = strings.TrimSpace(c.CreditsCount)
+		c.TeacherName = strings.TrimSpace(c.TeacherName)
+		cs = append(cs, c)
+	}
+
+	return
+}
+
+func (d *db) GetGroupCoursesPoint(ctx context.Context, groupId, userId int64, academicYear string) (cs []dto.Course, err error) {
+	cs = []dto.Course{}
+	var (
+		assisTantId int64
+		teacherId   int64
+	)
+	queryStr := `SELECT 
+    				t.kas,
+					t.kst,
+					t.kdn,
+					t.kgr,
+					prk.npr, 
+					sot.nst, 
+					t.kolkr
+				FROM tblvdkr t
+				INNER JOIN prk ON t.kpr = prk.kdn
+				INNER JOIN sot ON (t.kst = sot.kdn OR t.kas = sot.kdn)
+				WHERE t.kgr = $1 AND (t.kst = $2 OR t.kas = $2) AND chruchgod = $3`
+	rows, err := d.pool.QueryContext(ctx, queryStr, groupId, userId, academicYear)
+	if err != nil {
+		return
+	}
+
+	for rows.Next() {
+		c := dto.Course{}
+		err = rows.Scan(&assisTantId, &teacherId, &c.PointId, &c.GroupId, &c.CourseName, &c.TeacherName, &c.CreditsCount)
 		if err != nil {
 			return
 		}
